@@ -1,4 +1,5 @@
 3.03000
+    - Made Net::Twitter safe for subclassing
     - Added "authenticate" parameter handling. By default REST API methods
       inclued an Authorization header; Search API methods do not. Can be
       overridden with "authenticate => 0|1".  This finally allows getting
